data/derived/fa15/progs/unify/prog2985.ml.out
Characters 161-165:
  List.fold_left f base l;;
                   ^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
